--- a/Page.html
+++ b/Page.html
@@ -7,7 +7,10 @@
     <title>游戏下载</title>
 </head>>
 <body>
-    <a href="What is my number.exe">点击下载</a>
-
+    <h1>猜数字游戏官方下载界面</h1>
+    <h2>By HbSjzChangan81djx</h2>
+    <a href="What is my number.exe">戳我下载exe文件</a>
+    <a href="What is my number.exe">戳我下载压缩文件</a>
+    
 </body>
 </html>
