--- a/Page.html
+++ b/Page.html
@@ -10,7 +10,7 @@
     <h1>猜数字游戏官方下载界面</h1>
     <h2>By HbSjzChangan81djx</h2>
     <a href="What is my number.exe">戳我下载exe文件</a>
-    <a href="What is my number.exe">戳我下载压缩文件</a>
+    <a href="What is my number.zip">戳我下载压缩文件</a>
     
 </body>
 </html>
