--- a/Page.html
+++ b/Page.html
@@ -9,6 +9,7 @@
 <body>
     <h1>猜数字游戏官方下载界面</h1>
     <h2>By HbSjzChangan81djx</h2>
+    <p>下载最新版本</p>
     <a href="What is my number.exe">戳我下载exe文件</a>
     <a href="What is my number.zip">戳我下载压缩文件</a>
     
