--- a/Page.html
+++ b/Page.html
@@ -12,7 +12,7 @@
     <p>下载最新版本</p>
     <a href="What is my number.exe">戳我下载exe文件</a>
     <a href="What is my number.zip">戳我下载压缩文件</a>
-    <a href="https://little-idea.github.io/Foundnum/history.html">点击下载</a>
+    <a href="https://little-idea.github.io/Foundnum/history.html">下载旧版本的游戏</a>
     
 </body>
 </html>
