--- a/Page.html
+++ b/Page.html
@@ -13,6 +13,6 @@
     <a href="What is my number.exe">戳我下载exe文件</a>
     <a href="What is my number.zip">戳我下载压缩文件</a>
     <a href="https://little-idea.github.io/Foundnum/history.html">下载旧版本的游戏</a>
-    
+::中国河北石家庄81中董佳鑫制作    
 </body>
 </html>
