--- a/Page.html
+++ b/Page.html
@@ -12,7 +12,7 @@
     <p>下载最新版本</p>
     <a href="What is my number.exe">戳我下载exe文件</a>
     <a href="What is my number.zip">戳我下载压缩文件</a>
-    <a href="https://little-idea.github.io/Foundnum/history.html">下载旧版本的游戏</a>
+    <p>下载旧版本的游戏<a href="https://little-idea.github.io/Foundnum/history.html">戳我</a></p>
 <!--中国河北石家庄81中董佳鑫制作-->
     <h1>不要吐槽网页很烂，正在学习HTML5，将来会越来越好的</h1>
 </body>
