--- a/Page.html
+++ b/Page.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>游戏下载</title>
-</head>>
+</head>
 <body>
     <h1>猜数字游戏官方下载界面</h1>
-    <h2>By HbSjzChangan81djx</h2>
     <p>下载最新版本</p>
     <a href="What is my number.exe">戳我下载exe文件</a>
     <a href="What is my number.zip">戳我下载压缩文件</a>
