--- a/Page.html
+++ b/Page.html
@@ -9,10 +9,11 @@
 <body>
     <h1>猜数字游戏官方下载界面</h1>
     <p>下载最新版本</p>
-    <a href="What is my number.exe">戳我下载exe文件</a>
-    <a href="What is my number.zip">戳我下载压缩文件</a>
+    <a href="install.zip">戳我下载安装文件</a>
+    <a href="https://little-idea.github.io/Foundnum/quistion.html">戳我查看安装教程</a>
     <p>下载旧版本的游戏<a href="https://little-idea.github.io/Foundnum/history.html">戳我</a></p>
+    <p>下载测试版的游戏<a href="https://little-idea.github.io/Foundnum/beta.html">戳我</a></p>
 <!--中国河北石家庄81中董佳鑫制作-->
-    <h2>不要吐槽网页很烂，正在学习HTML5，将来会越来越好的!!!</h2>
+
 </body>
 </html>
