--- a/history.html
+++ b/history.html
@@ -5,7 +5,7 @@
     <title>下载历史版本</title>
 </head>
 <body>
-<h2>下载适用于旧版的游戏</h2>>
-<a href="猜数字游戏v1.0.0.bat">戳我下载v1.0.0版</a>
+<h1>404 Not Found</h1>>
+<h3>暂时没有历史正式版</h3>
 </body>
 </html>
