--- a/Page.html
+++ b/Page.html
@@ -9,7 +9,7 @@
 <body>
     <h1>猜数字游戏官方下载界面</h1>
     <p>下载最新版本</p>
-    <a href="install.zip">戳我下载安装文件</a>
+    <a href=".\game\install.zip">戳我下载安装文件</a>
     <a href="https://little-idea.github.io/Foundnum/help.html">戳我查看安装教程</a>
     <p>下载旧版本的游戏<a href="https://little-idea.github.io/Foundnum/history.html">戳我</a></p>
     <p>下载测试版的游戏<a href="https://little-idea.github.io/Foundnum/beta.html">戳我</a></p>
