--- a/beta.html
+++ b/beta.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2>下载测试版游戏</h2>
-    <p><a href="c-0.1.1.zip">下载c-0.1.1</a></p>
-    <p><a href="猜数字游戏v1.0.0.bat">下载c-0.1.0</a></p>
+    <p><a href=".\game\c-0.1.1.zip">下载c-0.1.1</a></p>
+    <p><a href=".\game\猜数字游戏c-0.1.0.bat">下载c-0.1.0</a></p>
 </body>
 </html>
