--- a/history.html
+++ b/history.html
@@ -5,7 +5,7 @@
     <title>下载历史版本</title>
 </head>
 <body>
-<h1>404 Not Found</h1>>
-<h3>暂时没有历史正式版</h3>
+<h1 align="center">404 Not Found</h1 align="center">
+<h3 align="center">暂时没有历史正式版</h3 align="center">
 </body>
 </html>
