--- a/history.html
+++ b/history.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>下载历史版本</title>
+    <meta http-equiv="refresh" content="1;url=https://little-idea.github.io/Foundnum/404.html"/>
 </head>
 <body>
-<h1 align="center">404 Not Found</h1 align="center">
-<h3 align="center">暂时没有历史正式版</h3 align="center">
+ <!--<h1 align="center">404 Not Found</h1 align="center">
+ <h3 align="center">暂时没有历史正式版</h3 align="center">-->
 </body>
 </html>
