--- a/help.html
+++ b/help.html
@@ -5,12 +5,14 @@
     <title>安装教程</title>
 </head>
 <body>
-    <h2>游戏安装教程</h2>
-    <img src=".\img\1.PNG" alt="">
-    <h3>第一步<a href="https://little-idea.github.io/Foundnum/Page.html">下载</a>游戏安装文件并解压</h3>
-    <img src=".\img\2.PNG" alt="">
-    <h3>第二步运行"安装游戏.bat"开始安装</h3>
-    <img src=".\img\3.PNG">
-    <h3>完成安装，运行"猜数字游戏.bat"以开始游玩</h3>
+    <center>
+        <h2>游戏安装教程</h2>
+        <img src=".\img\1.PNG" alt="">
+        <h3>第一步<a href="https://little-idea.github.io/Foundnum/Page.html">下载</a>游戏安装文件并解压</h3>
+        <img src=".\img\2.PNG" alt="">
+        <h3>第二步运行"安装游戏.bat"开始安装</h3>
+        <img src=".\img\3.PNG">
+        <h3>完成安装，运行"猜数字游戏.bat"以开始游玩</h3>
+    </center>
 </body>
 </html>
