--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
         <a href="https://little-idea.github.io/Foundnum/help.html">戳我查看安装教程</a>
         <p>下载旧版本的游戏<a href="https://little-idea.github.io/Foundnum/history.html">戳我</a></p>
         <p>下载测试版的游戏<a href="https://little-idea.github.io/Foundnum/beta.html">戳我</a></p>
+        <h4><a href=".\game\install -patch uninstall.zip" style="color: red">!!!点我下载最新的版本（有卸载补丁）!!!</a></h4>
         <!--中国河北石家庄81中董佳鑫制作-->
 
     </center>
