--- a/home.html
+++ b/home.html
@@ -2,22 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>游戏下载</title>
+    <title>实验</title>
+    <style>
+        /*background*/
+        body{
+            background: white;
+        }
+        /*取消超链接下划线*/
+        a{ text-decoration:none}
+        a:hover{ text-decoration:none}
+    </style>
 </head>
 <body>
-    <center>
-        <!--下载-->
-        <h1>猜数字游戏官方下载界面</h1>
-        <p>下载最新版本</p>
-        <a href=".\game\install.zip">戳我下载安装文件</a>
-        <a href="https://little-idea.github.io/Foundnum/help.html">戳我查看安装教程</a>
-        <p>下载旧版本的游戏<a href="https://little-idea.github.io/Foundnum/history.html">戳我</a></p>
-        <p>下载测试版的游戏<a href="https://little-idea.github.io/Foundnum/beta.html">戳我</a></p>
-        <h4><a href=".\game\install -patch uninstall.zip" style="color: red">!!!点我下载最新的版本（有卸载补丁）!!!</a></h4>
-        <!--中国河北石家庄81中董佳鑫制作-->
-
-    </center>
+<div id="s-top-left" class="s-top-left s-isindex-wrap">
+    <a href="https://little-idea.github.io/Foundnum/hmoe.html" target="_blank" class="mnav c-font-normal c-color-t" style="color: red">首页</a>
+    <a href="https://little-idea.github.io/Foundnum/help.html" target="_blank" class="mnav c-font-normal c-color-t" style="color: blue">帮助</a>
+    <a href="https://little-idea.github.io/Foundnum/download.html" target="_blank" class="mnav c-font-normal c-color-t" style="color: blue">下载游戏</a>
+</div>
+<center>
+    <img src="./img/box.png" height="200" width="200">
+    <h1>欢迎来到猜数字游戏</h1>
+    <button type="button" class="button" style="width: 200px;height: 50px">
+        <a href="./game/install -patch uninstall.zip" style="color: black">免费下载</a>
+    </button>
+</center>
 </body>
 </html>
