--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>实验</title>
+    <title>首页</title>
     <style>
         /*background*/
         body{
