--- a/404.html
+++ b/404.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hans">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Not Found</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<h1 align="center">404 Not Found</h1 align="center">
+    <div class="channel">
+        <b>Not Found</b>
+    </div>
+    <div class="container">
+        <span>4</span>
+        <span class="middle"></span>
+        <span>4</span>
+    </div>
 </body>
+
 </html>
