--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 <div id="s-top-left" class="s-top-left s-isindex-wrap">
     <a href="https://little-idea.github.io/Foundnum/hmoe.html" target="_blank" class="mnav c-font-normal c-color-t" style="color: red">首页</a>
     <a href="https://little-idea.github.io/Foundnum/help.html" target="_blank" class="mnav c-font-normal c-color-t" style="color: blue">帮助</a>
-    <a href="https://little-idea.github.io/Foundnum/download.html" target="_blank" class="mnav c-font-normal c-color-t" style="color: blue">下载游戏</a>
+    <a href="https://little-idea.github.io/Foundnum/down.html" target="_blank" class="mnav c-font-normal c-color-t" style="color: blue">下载游戏</a>
 </div>
 <center>
     <img src="./img/box.png" height="200" width="200">
