--- a/down.html
+++ b/down.html
@@ -17,9 +17,9 @@
 </head>
 <body>
     <div id="s-top-left" class="s-top-left s-isindex-wrap">
-        <a href="https://little-idea.github.io/Foundnum/hmoe.html" target="_blank" class="mnav c-font-normal c-color-t" style="color:red">首页</a>
+        <a href="https://little-idea.github.io/Foundnum/hmoe.html" target="_blank" class="mnav c-font-normal c-color-t" style="color:blue">首页</a>
         <a href="https://little-idea.github.io/Foundnum/help.html" target="_blank" class="mnav c-font-normal c-color-t" style="color:blue">帮助</a>
-        <a href="https://little-idea.github.io/Foundnum/download.html" target="_blank" class="mnav c-font-normal c-color-t" style="color: blue">下载游戏</a>
+        <a href="https://little-idea.github.io/Foundnum/download.html" target="_blank" class="mnav c-font-normal c-color-t" style="color: red">下载游戏</a>
 
     </div>
     <center>
